--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.12",
+    "node": "~0.8.0",
     "gatsby-image": "^2.4.9",
     "gatsby-plugin-manifest": "^2.4.14",
     "gatsby-plugin-offline": "^3.2.13",
     "gatsby-plugin-react-helmet": "^3.3.6",
     "gatsby-plugin-sharp": "^2.6.14",
     "gatsby-source-filesystem": "^2.3.14",
-    "gatsby-theme-jsonresume": "^1.0.6",
     "gatsby-transformer-sharp": "^2.5.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
